--- a/style.css
+++ b/style.css
@@ -1,11 +1,29 @@
+* {
+    background-color: #BED6B8;
+}
+
 .pealkiri {
     font-weight: 700;
     font-family: sans-serif;
-    font-size:120;
+    font-size:40px;
     color: rgb(13, 13, 158);
 }
 
+.tutvustus {
+    font-weight: 600;
+    font-size: 25px;
+}
+
 .tekst {
-    font-size:70;
+    font-size:20px;
     font-family: 'Times New Roman';
+}
+
+table, th, td {
+    border: 1px solid;
+  }
+
+.pilt{
+    border: 2px solid;
+    box-shadow: 5px 5px 20px #888888;
 }
